plane/lb2.yaml
apiVersion: v1
kind: Service
metadata:
  name: avisvc-lb
  namespace: planespotter
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    name: eighty
  selector:
    app: nginx-deployment
